--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     <div class="container">
 
       <div class="block">
-        <img src="vestido pétala" alt="Vestido Pétala" class="block-image">
+        <img src="Vestido Pétala" alt="Vestido Pétala" class="block-image">
         <p>Vestido Pétala</p>
         <span class="preco">R$ 124,99</span>
         <button onclick="adicionarAoCarrinho('Vestido Pétala')" class="buy-button">Adicionar ao carrinho</button><br>
