--- a/index.html
+++ b/index.html
@@ -107,7 +107,8 @@
 
 <div class="block">
   <img src="vestido india.jpg" alt="Vestido Índia" class="block-image">
-  <p>Vestido Índia</p>
+  <p>   Vestido Índia
+  Disponivel na cor marrom</p>
   <span class="preco">R$ 74,99</span>
   <button onclick="adicionarAoCarrinho('Vestido Índia')" class="buy-button">Adicionar ao carrinho</button><br>
   <a class="buy-button" href="https://wa.me/5563992887772?text=Olá! Quero comprar o Vestido Índia." target="_blank">Comprar</a>
