--- a/index.html
+++ b/index.html
@@ -106,8 +106,9 @@
 </div>
 
 <div class="block">
-  <img src="vestido india.jpg" alt="Vestido Índia Disponivel na cor marrom" class="block-image">
+  <img src="vestido india.jpg" alt="Vestido Índia" class="block-image">
   <p>Vestido Índia</p>
+  <small>Disponível na cor marrom.</small>
   <span class="preco">R$ 74,99</span>
   <button onclick="adicionarAoCarrinho('Vestido Índia')" class="buy-button">Adicionar ao carrinho</button><br>
   <a class="buy-button" href="https://wa.me/5563992887772?text=Olá! Quero comprar o Vestido Índia." target="_blank">Comprar</a>
