--- a/index.html
+++ b/index.html
@@ -153,6 +153,31 @@
         <a class="buy-button" href="https://wa.me/5563992887772?text=Olá! Quero comprar o Conjunto Tip." target="_blank">Comprar</a>
       </div>
 
+      
+      <div class="block">
+        <img src="Blusa assimetrica com gola.jpg" alt="Blusa Assimétrica com gola" class="block-image" onclick="contarClique('Blusa Assimétrica com gola')">
+        <p>Blusa Assimétrica com gola</p>
+        <span class="preco">R$ 55,00</span>
+        <button onclick="adicionarAoCarrinho('Blusa Assimétrica com gola')" class="buy-button">Adicionar ao carrinho</button><br>
+        <a class="buy-button" href="https://wa.me/5563992887772?text=Olá! Quero comprar o Blusa Assimétrica com gola." target="_blank">Comprar</a>
+      </div>
+
+      <div class="block">
+        <img src="blusa assimetrica.jpg" alt="Blusa Assimétrica" class="block-image" onclick="contarClique('Blusa Assimétrica')">
+        <p>Blusa Assimétrica</p>
+        <span class="preco">R$ 50,00</span>
+        <button onclick="adicionarAoCarrinho('Blusa Assimétrica')" class="buy-button">Adicionar ao carrinho</button><br>
+        <a class="buy-button" href="https://wa.me/5563992887772?text=Olá! Quero comprar o Blusa Assimétrica." target="_blank">Comprar</a>
+      </div>
+
+      <div class="block">
+        <img src="cropped assimetrico.jpg" alt="Cropped assimétrico" class="block-image" onclick="contarClique('Conjunto Luma')">
+        <p>Cropped assimétrico</p>
+        <span class="preco">R$ 119,99</span>
+        <button onclick="adicionarAoCarrinho('Cropped assimétrico')" class="buy-button">Adicionar ao carrinho</button><br>
+        <a class="buy-button" href="https://wa.me/5563992887772?text=Olá! Quero comprar o Cropped assimétrico." target="_blank">Comprar</a>
+      </div>
+
     </div>
   </div>
 
