--- a/index.html
+++ b/index.html
@@ -315,7 +315,7 @@ function atualizarCarrinho() {
 
 function finalizarCarrinho() {
   if(carrinho.length === 0){ alert("Carrinho vazio!"); return; }
-  const texto = encodeURIComponent("Quero comprar: "+carrinho.join(", "));
+  const texto = encodeURIComponent("Olá, Quero comprar o : "+carrinho.join(", "));
   carrinho = [];
   salvarCarrinho();
   atualizarCarrinho();
