--- a/index.html
+++ b/index.html
@@ -246,6 +246,34 @@ body {
       <button class="buy-button" onclick="adicionarAoCarrinho('Cropped assimétrico')">Adicionar ao carrinho</button>
     </div>
 
+    <div class="block">
+      <img src="body Celine.jpg" alt="Body Celine" onclick="adicionarAoCarrinho('Body Celine')">
+      <p>Body Celine</p>
+      <span class="preco">R$ 55,50</span>
+      <button class="buy-button" onclick="adicionarAoCarrinho('Body Celine')">Adicionar ao carrinho</button>
+    </div>
+
+    <div class="block">
+      <img src="short alfaiataria.jpg" alt="Short Alfaiataria" onclick="adicionarAoCarrinho('Short Alfaiataria')">
+      <p>Short Alfaiataria</p>
+      <span class="preco">R$ 75,50</span>
+      <button class="buy-button" onclick="adicionarAoCarrinho('Short Alfaiataria')">Adicionar ao carrinho</button>
+    </div>
+
+    <div class="block">
+      <img src="body lizz.jpg" alt="Body Lizz" onclick="adicionarAoCarrinho('Body Lizz')">
+      <p>Body Lizz</p>
+      <span class="preco">R$ 50,49</span>
+      <button class="buy-button" onclick="adicionarAoCarrinho('Body Lizz')">Adicionar ao carrinho</button>
+    </div>
+
+    <div class="block">
+      <img src="body tallas.jpg" alt="Body Tallas" onclick="adicionarAoCarrinho('Body Tallas')">
+      <p>Body Tallas</p>
+      <span class="preco">R$ 50,49</span>
+      <button class="buy-button" onclick="adicionarAoCarrinho('Body Tallas')">Adicionar ao carrinho</button>
+    </div>
+
   </div>
 </div>
 
@@ -267,20 +295,27 @@ const produtos = {
   "Conjunto Luma": { preco: "R$ 119,99", img: "conjunto luma.jpg" },
   "Vestido Vitrine": { preco: "R$ 99,99", img: "vestido vitrine.jpg" },
   "Conjunto Tip": { preco: "R$ 54,99", img: "conjunto tip.jpg" },
-  "Blusa Assimétrica com gola": { preco: "R$ 55,00", img: "Blusa assimetrica com gola.jpg" },
+  "Blusa Assimétrica com gola": { preco: "R$ 55,00", img: "blusa assimetrica com gola.jpg" },
   "Blusa Assimétrica": { preco: "R$ 50,00", img: "blusa assimetrica.jpg" },
-  "Cropped assimétrico": { preco: "R$ 45,00", img: "cropped assimetrico.jpg" }
+  "Cropped assimétrico": { preco: "R$ 45,00", img: "cropped assimetrico.jpg" },
+  "Body Lizz": { preco: "R$ 50,49", img: "body lizz.jpg" },
+  "Body Celine": { preco: "R$ 55,50", img: "body celine.jpg" },
+  "Body Tallas": { preco: "R$ 50,49", img: "body tallas.jpg" },
+  "Short Alfaiataria": { preco: "R$ 75,50", img: "short alfaiataria.jpg" } // corrigido
 };
 
 function adicionarAoCarrinho(nome) {
-  if(!produtos[nome]) return alert("Produto não encontrado!");
+  if (!produtos[nome]) {
+    alert("Produto não encontrado: " + nome);
+    return;
+  }
   carrinho.push(nome);
   salvarCarrinho();
   atualizarCarrinho();
 }
 
 function removerDoCarrinho(index) {
-  carrinho.splice(index,1);
+  carrinho.splice(index, 1);
   salvarCarrinho();
   atualizarCarrinho();
 }
@@ -292,20 +327,25 @@ function salvarCarrinho() {
 function atualizarCarrinho() {
   const lista = document.getElementById("dropdown-carrinho");
   lista.innerHTML = "";
-  if(carrinho.length === 0){
+  if (carrinho.length === 0) {
     lista.innerHTML = "<li>Carrinho vazio</li>";
     document.getElementById("carrinho-count").innerText = "0";
     return;
   }
-  carrinho.forEach((item,index)=>{
+
+  carrinho.forEach((item, index) => {
+    const produto = produtos[item];
+    if (!produto) return; // evita erro se o nome estiver incorreto
+
     const li = document.createElement("li");
     li.innerHTML = `
-      <img src="${produtos[item].img}" class="mini-img" alt="${item}">
-      <span>${item} - ${produtos[item].preco}</span>
+      <img src="${produto.img}" class="mini-img" alt="${item}">
+      <span>${item} - ${produto.preco}</span>
       <button class="remove-button" onclick="removerDoCarrinho(${index})">❌</button>
     `;
     lista.appendChild(li);
   });
+
   const liFinal = document.createElement("li");
   liFinal.innerHTML = `<button class="buy-button" onclick="finalizarCarrinho()">Finalizar Compra</button>`;
   lista.appendChild(liFinal);
@@ -314,21 +354,21 @@ function atualizarCarrinho() {
 }
 
 function finalizarCarrinho() {
-  if(carrinho.length === 0){ alert("Carrinho vazio!"); return; }
-  const texto = encodeURIComponent("Olá, Quero comprar o : "+carrinho.join(", "));
+  if (carrinho.length === 0) {
+    alert("Carrinho vazio!");
+    return;
+  }
+  const texto = encodeURIComponent("Quero comprar: " + carrinho.join(", "));
   carrinho = [];
   salvarCarrinho();
   atualizarCarrinho();
-  window.open("https://wa.me/5563992887772?text="+texto,"_blank");
+  window.open("https://wa.me/5563992887772?text=" + texto, "_blank");
 }
 
 function toggleCarrinho() {
   const dropdown = document.getElementById("dropdown-carrinho");
-  dropdown.style.display = dropdown.style.display==="block" ? "none":"block";
+  dropdown.style.display = dropdown.style.display === "block" ? "none" : "block";
 }
 
 window.onload = atualizarCarrinho;
 </script>
-
-</body>
-</html>
