--- a/index.html
+++ b/index.html
@@ -240,24 +240,10 @@ body {
     </div>
 
     <div class="block">
-      <img src="cropped assimetrico.jpg" alt="Cropped assimétrico" onclick="adicionarAoCarrinho('Cropped assimétrico')">
-      <p>Cropped assimétrico</p>
-      <span class="preco">R$ 45,00</span>
-      <button class="buy-button" onclick="adicionarAoCarrinho('Cropped assimétrico')">Adicionar ao carrinho</button>
-    </div>
-
-    <div class="block">
-      <img src="body celine.jpg" alt="Body Celine" onclick="adicionarAoCarrinho('Body Celine')">
-      <p>Body Celine</p>
-      <span class="preco">R$ 55,50</span>
-      <button class="buy-button" onclick="adicionarAoCarrinho('Body Celine')">Adicionar ao carrinho</button>
-    </div>
-
-    <div class="block">
-      <img src="short alfaiataria.jpg" alt="Short Alfaiataria" onclick="adicionarAoCarrinho('Short Alfaiataria')">
-      <p>Short Alfaiataria</p>
-      <span class="preco">R$ 75,50</span>
-      <button class="buy-button" onclick="adicionarAoCarrinho('Short Alfaiataria')">Adicionar ao carrinho</button>
+      <img src="body tallas.jpg" alt="Body Tallas" onclick="adicionarAoCarrinho('Body Tallas')">
+      <p>Body Tallas</p>
+      <span class="preco">R$ 50,49</span>
+      <button class="buy-button" onclick="adicionarAoCarrinho('Body Tallas')">Adicionar ao carrinho</button>
     </div>
 
     <div class="block">
@@ -268,10 +254,17 @@ body {
     </div>
 
     <div class="block">
-      <img src="body tallas.jpg" alt="Body Tallas" onclick="adicionarAoCarrinho('Body Tallas')">
-      <p>Body Tallas</p>
-      <span class="preco">R$ 50,49</span>
-      <button class="buy-button" onclick="adicionarAoCarrinho('Body Tallas')">Adicionar ao carrinho</button>
+      <img src="short alfaiataria.jpg" alt="Short Alfaiataria" onclick="adicionarAoCarrinho('Short Alfaiataria')">
+      <p>Short Alfaiataria</p>
+      <span class="preco">R$ 75,50</span>
+      <button class="buy-button" onclick="adicionarAoCarrinho('Short Alfaiataria')">Adicionar ao carrinho</button>
+    </div>
+
+    <div class="block">
+      <img src="body Celine.jpg" alt="Body Celine" onclick="adicionarAoCarrinho('Body Celine')">
+      <p>Body Celine</p>
+      <span class="preco">R$ 55,50</span>
+      <button class="buy-button" onclick="adicionarAoCarrinho('Body Celine')">Adicionar ao carrinho</button>
     </div>
 
   </div>
