--- a/index.html
+++ b/index.html
@@ -254,14 +254,14 @@ body {
     </div>
 
     <div class="block">
-      <img src="short alfaiataria .jpg" alt="Short Alfaiataria" onclick="adicionarAoCarrinho('Short Alfaiataria')">
+      <img src="short alfaiataria.jpg" alt="Short Alfaiataria" onclick="adicionarAoCarrinho('Short Alfaiataria')">
       <p>Short Alfaiataria</p>
       <span class="preco">R$ 75,50</span>
       <button class="buy-button" onclick="adicionarAoCarrinho('Short Alfaiataria')">Adicionar ao carrinho</button>
     </div>
 
     <div class="block">
-      <img src="body celine.jpg" alt="Body Celine" onclick="adicionarAoCarrinho('Body Celine')">
+      <img src="body Celine.jpg" alt="Body Celine" onclick="adicionarAoCarrinho('Body Celine')">
       <p>Body Celine</p>
       <span class="preco">R$ 55,50</span>
       <button class="buy-button" onclick="adicionarAoCarrinho('Body Celine')">Adicionar ao carrinho</button>
@@ -294,7 +294,7 @@ const produtos = {
   "Body Lizz": { preco: "R$ 50,49", img: "body lizz.jpg" },
   "Body Celine": { preco: "R$ 55,50", img: "body celine.jpg" },
   "Body Tallas": { preco: "R$ 50,49", img: "body tallas.jpg" },
-  "Short Alfaiataria": { preco: "R$ 75,50", img: "short alfaiataria .jpg" } // corrigido
+  "Short Alfaiataria": { preco: "R$ 75,50", img: "short alfaiataria.jpg" } // corrigido
 };
 
 function adicionarAoCarrinho(nome) {
