--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@ body {
     </div>
 
     <div class="block">
-      <img src="short alfaiataria.jpg" alt="short alfaiataria" onclick="adicionarAoCarrinho('Short Alfaiataria')">
+      <img src="short_alfaiataria.jpg" alt="short alfaiataria" onclick="adicionarAoCarrinho('Short Alfaiataria')">
       <p>Short Alfaiataria</p>
       <span class="preco">R$ 75,50</span>
       <button class="buy-button" onclick="adicionarAoCarrinho('Short Alfaiataria')">Adicionar ao carrinho</button>
