--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Closet Da Nil💕</title>
+<title>Closet Da Nil💕...</title>
 <link rel="stylesheet" href="styles.css">
 <style>
 /* Estilo base já fornecido pelo usuário */
