--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Closet Da Nil💕...</title>
+<title>Closet Da Nil💕</title>
 <link rel="stylesheet" href="styles.css">
 <style>
 /* Estilo base já fornecido pelo usuário */
@@ -253,7 +253,12 @@ body {
       <button class="buy-button" onclick="adicionarAoCarrinho('Body Lizz')">Adicionar ao carrinho</button>
     </div>
 
-    
+    <div class="block">
+      <img src="body Celine.jpg" alt="Body Celine" onclick="adicionarAoCarrinho('Body Celine')">
+      <p>Body Celine</p>
+      <span class="preco">R$ 55,50</span>
+      <button class="buy-button" onclick="adicionarAoCarrinho('Body Celine')">Adicionar ao carrinho</button>
+    </div>
     
 
   </div>
@@ -281,6 +286,7 @@ const produtos = {
   "Blusa Assimétrica": { preco: "R$ 50,00", img: "blusa assimetrica.jpg" },
   "Cropped assimétrico": { preco: "R$ 45,00", img: "cropped assimetrico.jpg" },
   "Body Lizz": { preco: "R$ 50,49", img: "body lizz.jpg" },
+  "Body Celine": { preco: "R$ 55,50", img: "body celine.jpg" },
   "Body Tallas": { preco: "R$ 50,49", img: "body tallas.jpg" },
   
 };
