--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@ body {
     </div>
 
     <div class="block">
-      <img src="body Celine.jpg" alt="Body Celine" onclick="adicionarAoCarrinho('Body Celine')">
+      <img src="body celine.jpg" alt="Body Celine" onclick="adicionarAoCarrinho('Body Celine')">
       <p>Body Celine</p>
       <span class="preco">R$ 55,50</span>
       <button class="buy-button" onclick="adicionarAoCarrinho('Body Celine')">Adicionar ao carrinho</button>
