--- a/index.html
+++ b/index.html
@@ -178,6 +178,16 @@ body {
   color: white;
   text-decoration: underline;
 }
+
+/* ===== Botão flutuante WhatsApp ===== */
+    .whatsapp-btn {
+      position:fixed; bottom:90px; right:20px;
+      background:#dd43aa; padding:15px 20px; border-radius:50px;
+      color:white; font-weight:bold; text-decoration:none; box-shadow:0 5px 15px rgba(0,0,0,0.3);
+      transition:0.3s;
+    }
+    .whatsapp-btn:hover { background:#dd43aa; }
+  
 </style>
 </head>
 <body>
@@ -257,6 +267,9 @@ body {
 
   </div>
 </div>
+
+  <!-- Botão flutuante WhatsApp -->
+  <a href="https://wa.me/5563992887772" target="_blank" class="whatsapp-btn">💬 Fale no WhatsApp</a>
 
 <footer class="footer">
   <p>Entre em contato:</p>
