--- a/index.html
+++ b/index.html
@@ -288,7 +288,7 @@ const produtos = {
   "Vestido Flor": { preco: "R$ 149,99", img: "vestido flor.jpg" },
   "Conjunto Luma": { preco: "R$ 119,99", img: "conjunto luma.jpg" },
   "Vestido Vitrine": { preco: "R$ 99,99", img: "vestido vitrine.jpg" },
-  "Blusa Assimétrica com gola": { preco: "R$ 55,00", img: "blusa assimetrica com gola.jpg" },
+  "Blusa Assimétrica com gola": { preco: "R$ 55,00", img: "Blusa assimetrica com gola.jpg" },
   "Blusa Assimétrica": { preco: "R$ 50,00", img: "blusa assimetrica.jpg" },
   "Cropped assimétrico": { preco: "R$ 45,00", img: "cropped assimetrico.jpg" },
   "Body Lizz": { preco: "R$ 50,49", img: "body lizz.jpg" },
